feat: Implementação do serviço de controle de dispositivos Tuya com suporte a mocks
- Adicionada a classe `Tuya` para gerenciar o status e os comandos do dispositivo.

- Criadas rotas para operações do dispositivo: ligar, desligar, obter status e consumo.

- Introduzido o arquivo `tuya.service.ts` para lidar com interações da API Tuya com lógica de repetição.

- Implementado o `TuyaContext` para gerenciar o cliente e os serviços da API.

- Adicionada funcionalidade de registro de requisições para rastrear chamadas à API.

- Documentação Swagger atualizada para refletir as novas operações do dispositivo.

- Controlador de verificação de integridade aprimorado para suportar o tratamento de respostas personalizadas.

- Adicionados testes unitários para o serviço Tuya para validar o comportamento do cliente real e do mock.
